--- a/src/components/home/Bio.module.css
+++ b/src/components/home/Bio.module.css
@@ -1,7 +1,7 @@
 .bio {
-  padding: 3rem 1rem;
   max-width: 50rem;
   margin: 0 auto;
+  margin-top: 4rem;
   color: var(--text);
   line-height: 1.8;
 }
